Fixed agents getting stuck, started working on Simulation (doesn't work), pause agents (doesn't work), and moved the static methods from GameLogic to GameState to resolve a dependency